backup_cluster/default/ingress.extensions_nodejs-cpu-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{},"name":"nodejs-cpu-ingress","namespace":"default"},"spec":{"rules":[{"host":"nodejs-cpu-app","http":{"paths":[{"backend":{"serviceName":"nodejs-cpu-service","servicePort":3000},"path":"/"}]}}]}}
  creationTimestamp: "2019-07-27T12:16:08Z"
  generation: 1
  name: nodejs-cpu-ingress
  namespace: default
  resourceVersion: "16978033"
  selfLink: /apis/extensions/v1beta1/namespaces/default/ingresses/nodejs-cpu-ingress
  uid: 506bfa6f-b068-11e9-858a-fa163eb7a9f3
spec:
  rules:
  - host: nodejs-cpu-app
    http:
      paths:
      - backend:
          serviceName: nodejs-cpu-service
          servicePort: 3000
        path: /
status:
  loadBalancer: {}
